[gd_scene load_steps=8 format=3 uid="uid://c230d3kp4fgk6"]

[ext_resource type="PackedScene" uid="uid://hoc8wacnty4h" path="res://Player/player.tscn" id="1_1c26b"]
[ext_resource type="Script" path="res://admin_commands.gd" id="1_4jdlq"]
[ext_resource type="Script" path="res://world.gd" id="2_cq71g"]
[ext_resource type="Script" path="res://Player/player_camera.gd" id="3_6tn4k"]
[ext_resource type="PackedScene" uid="uid://du0adsu8h6e8m" path="res://HelperNodeScenes/enemy_manager.tscn" id="5_8dpcu"]
[ext_resource type="PackedScene" uid="uid://58ntcl5jbx5o" path="res://UIScenes/ui_manager.tscn" id="6_gr5o2"]
[ext_resource type="PackedScene" uid="uid://cg36f7ahykqxw" path="res://HelperNodeScenes/items_manager.tscn" id="7_s3ptg"]

[node name="Main" type="Node2D"]
y_sort_enabled = true
position = Vector2(676, 354)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_4jdlq")

[node name="World" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_cq71g")

[node name="Player" parent="World" instance=ExtResource("1_1c26b")]
y_sort_enabled = true
position = Vector2(0, 0)
scale = Vector2(1.295, 1.295)

[node name="PlayerCamera" type="Camera2D" parent="World"]
scale = Vector2(1.5, 1.5)
zoom = Vector2(1.1, 1.1)
script = ExtResource("3_6tn4k")

[node name="EnemyManager" parent="World" instance=ExtResource("5_8dpcu")]

[node name="UIManager" parent="." instance=ExtResource("6_gr5o2")]

[node name="ItemsManager" parent="." instance=ExtResource("7_s3ptg")]
